--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </div>
         </div>
     </div>
-    <!-- Exparience End -->
+    <!-- Experience End -->
 
 
     <!-- Internships Start -->
@@ -441,6 +441,80 @@
 
 
 
+    <!-- Skills & Certificates Start -->
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row g-0">
+                <div class="col-lg-3">
+                    <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
+                        <div class="text-start d-flex flex-column justify-content-center wow fadeInUp"
+                            data-wow-delay="0.1s">
+                            <p class="text-white sub-title">Skills & Certificates</p>
+                            <h1 class="display-6 text-white mb-0">My Skills & Certificates</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="experience-content h-100 pt-6 ps-6 pb-6">
+                        <div class="row g-4">
+                            <div class="col-12">
+                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <p class="fs-5 mb-0 me-4">Six months Industrial Internship
+                                        </p>
+                                        <div>
+                                            <span class="fa fa-calendar me-1"></span> 2022 -
+                                            2023
+                                        </div>
+                                    </div>
+                                    <h4 class="mb-3">Vardhman Yarns & Threads Ltd.</h4>
+                                    <p class="mb-0"> Completed six months of practical Internship in Engineering
+                                        department in Utility section and gained experience in managing the operation
+                                        and maintenance of machinery, mechanical equipment and critical infrastructures
+                                        including Boilers, D.M Plant, ETP, Air compressor, Water Softening Plant,
+                                        Cooling Towers, H-Plants, Diesel Generators, Water distribution system.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <p class="fs-5 mb-0 me-4">45 Days Internship</p>
+                                        <div>
+                                            <span class="fa fa-calendar me-1"></span> August 2021
+                                        </div>
+                                    </div>
+                                    <h4 class="mb-3">Emson Gears Ltd.</h4>
+                                    <p class="mb-0">Completed 45 days Internship during B.Tech 3rd year at Emson Gears
+                                        ltd. in August 2021
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
+                                    <div class="d-flex align-items-center mb-3">
+                                        <p class="fs-5 mb-0 me-4">CNC Lathe Turning, setup and operation</p>
+                                        <div>
+                                            <span class="fa fa-calendar me-1"></span> 2019
+                                        </div>
+                                    </div>
+                                    <h4 class="mb-3">Rockman Skill Development Center</h4>
+                                    <p class="mb-0"> Completed 3 months of practical training during Diploma in LATHE,
+                                        CNC Turning setup and operation and compatible with measuring instruments like
+                                        Vernier Caliper, Micrometer, Height gauge, etc.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Skills & Certificates End -->
+
+
+
     <!-- Skills Start -->
     <div class="container-fluid">
         <div class="container">
@@ -460,10 +534,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.1s">
-                                    <div class="text-primary text-center mb-3"><span
-                                            class="fab fa-wordpress fa-3x"></span></div>
+                                    <!--div class="text-primary text-center mb-3"><span
+                                            class="fab fa-wordpress fa-3x"></span></div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">98</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">98</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">Utility Operation & Maintenance</p>
@@ -472,10 +546,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.3s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-figma fa-3x"></span>
-                                    </div>
+                                    <!--div class="text-primary text-center mb-3"><span class="fab fa-figma fa-3x"></span>
+                                    </div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">95</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">95</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">Mechanical maintenance</p>
@@ -484,10 +558,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.5s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-sketch fa-3x"></span>
-                                    </div>
+                                    <!--div class="text-primary text-center mb-3"><span class="fab fa-sketch fa-3x"></span>
+                                    </div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">87</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">87</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">ETP Parameter Testing</p>
@@ -496,10 +570,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.7s">
-                                    <div class="text-primary text-center mb-3"><span
-                                            class="fab fa-elementor fa-3x"></span></div>
+                                    <!--div class="text-primary text-center mb-3"><span
+                                            class="fab fa-elementor fa-3x"></span></div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">75</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">75</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">AutoCad Drafting</p>
@@ -508,10 +582,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.1s">
-                                    <div class="text-primary text-center mb-3"><span
-                                            class="fab fa-js-square fa-3x"></span></div>
+                                    <!--div class="text-primary text-center mb-3"><span
+                                            class="fab fa-js-square fa-3x"></span></div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">67</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">67</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">Manpower planning & Inventory management</p>
@@ -520,10 +594,10 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-3">
                                 <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp"
                                     data-wow-delay="0.3s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-html5 fa-3x"></span>
-                                    </div>
+                                    <!--div class="text-primary text-center mb-3"><span class="fab fa-html5 fa-3x"></span>
+                                    </div-->
                                     <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">90</h4>
+                                        <!--h4 class="display-6" data-toggle="counter-up">90</h4-->
                                         <h4 class="display-6"></h4>
                                     </div>
                                     <p class="mb-0">5S, TPM & KAIZEN</p>
@@ -539,7 +613,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-fluid" id="pigraService">
+    <!--div class="container-fluid" id="pigraService">
         <div class="container">
             <div class="row g-0">
                 <div class="col-lg-3">
@@ -631,12 +705,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- Service End -->
 
 
     <!-- Portfolio Start -->
-    <div class="container-fluid">
+    <!--div class="container-fluid">
         <div class="container">
             <div class="row g-0">
                 <div class="col-lg-3">
@@ -720,7 +794,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- Portfolio End -->
 
 
@@ -865,7 +939,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid">
+    <!--div class="container-fluid">
         <div class="container">
             <div class="row g-0">
                 <div class="col-lg-3">
@@ -993,7 +1067,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- Testimonial End -->
 
 
@@ -1028,7 +1102,7 @@
                                         </div>
                                         <div>
                                             <h4>Address</h4>
-                                            <p class="mb-0">VYTL U-2 Ludhiana Punjab. India</p>
+                                            <p class="mb-0">VYTL U-2 Ludhiana, Punjab, India</p>
                                         </div>
                                     </div>
                                     <div class="d-flex mb-4">
@@ -1046,7 +1120,7 @@
                                             <i class="fa fa-phone-alt"></i>
                                         </div>
                                         <div>
-                                            <h4>Telephone</h4>
+                                            <h4>Contact</h4>
                                             <p class="mb-0">9463570216</p>
                                         </div>
                                     </div>
